<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/popup_background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15sp"
        android:textColor="@color/white"
        android:text="@string/enter_an_target"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15sp"
        android:inputType="number"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginVertical="10sp"
        android:text="@string/confirm"
        android:textSize="20sp" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginVertical="10sp"
        android:text="@string/btnCancel"
        android:textSize="20sp" />

</LinearLayout>